--- a/style.css
+++ b/style.css
@@ -12,21 +12,15 @@ body {
   height: 100%;
 }
 
-.account-page {
+body {
   position: relative;
-  width: 100%;
-  height: 100%;
+
   background-image: url(patrick-tomasso-QMDap1TAu0g-unsplash.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  gap: 50px;
 }
-.account-page::before {
+body::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -38,6 +32,17 @@ body {
   background-color: rgb(0, 0, 0, 0.5);
   backdrop-filter: blur(1px);
 }
+
+.account-page {
+  width: 100%;
+  height: max-content;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 50px;
+}
+
 .signin-form,
 .signup-form {
   position: relative;
@@ -51,7 +56,6 @@ body {
   border: 1px solid #ffee05;
   border-radius: 20px 20px 0 50px;
   padding: 20px 20px;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -201,30 +205,32 @@ body {
 .signup-form,
 .signin-form {
   transition: all 0.4s linear;
-  
+  transform: scale(0);
   opacity: 0;
   visibility: hidden;
+  width: 0;
+  height: 0;
 }
 
 .account-Btns {
+  width: 100%;
+  height: 20%;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-evenly;
   align-items: center;
-  gap: 10px;
-  width: 100%;
 }
 .SignUpButton,
 .SignInButton {
   transition: 0.4s ease-in-out;
   position: relative;
+  display: inline-flex;
   padding: 10px 20px;
   z-index: 1111;
   background-color: rgb(255, 238, 5, 0.3);
-  backdrop-filter: blur(20px);
   border-radius: 20px;
   color: white;
   font-weight: 400;
@@ -236,10 +242,48 @@ body {
 }
 .SignUpButton:hover,
 .SignInButton:hover {
-  background-color: rgb(255, 238, 5, 0.7);
-  color: black;
+  transition: 0.2s ease-in-out;
+  transform: scale(1.1);
+  border-radius: 20px 20px 0 20px;
+  background-color: rgb(255, 238, 5, 0.3);
+}
+.SignUpButton::before,
+.SignUpButton::after,
+.SignInButton::before,
+.SignInButton::after {
+  transition: 0.3s ease-in-out;
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
 }
 
+.SignUpButton::after,
+.SignInButton::after {
+  transition: 0.3s ease-in-out;
+  top: -8px;
+  left: -8px;
+  border-top: 2px solid transparent;
+  border-left: 2px solid transparent;
+}
+.SignUpButton::before,
+.SignInButton::before {
+  transition: 0.3s ease-in-out;
+  bottom: -8px;
+  right: -8px;
+  border-bottom: 2px solid transparent;
+  border-right: 2px solid transparent;
+}
+.SignUpButton:hover::before,
+.SignUpButton:hover::after,
+.SignInButton:hover::before,
+.SignInButton:hover::after {
+  transition: 0.4s ease-in-out;
+  width: calc(100% + 15px);
+  height: calc(100% + 15px);
+  border-radius: 20px 20px 0 20px;
+  border-color: #ffee05;
+}
 @media (max-width: 1489px) {
   .account-page {
     height: auto;
