--- a/style.css
+++ b/style.css
@@ -10,17 +10,39 @@ html,
 body {
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
-body {
-  position: relative;
+input:focus {
+  background-color: rgb(255, 238, 5, 0.1);
+}
 
+/* input:-internal-autofill-selected {
+  background-color: rgb(255, 238, 5, 0.1) !important;
+} */
+
+input:-internal-autofill-selected {
+  appearance: unset;
+  background-image: none !important;
+  background-color: rgb(255, 238, 5, 0.1) !important;
+  color: white !important;
+}
+
+main {
+  position: relative;
+  width: 100%;
+  height: 100vh;
   background-image: url(patrick-tomasso-QMDap1TAu0g-unsplash.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-body::before {
+
+main::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -30,30 +52,25 @@ body::before {
   left: 0;
   right: 0;
   background-color: rgb(0, 0, 0, 0.5);
-  backdrop-filter: blur(1px);
+  backdrop-filter: blur(5px);
 }
 
 .account-page {
+  position: relative;
   width: 100%;
-  height: max-content;
+  height: 100vh;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  gap: 50px;
 }
 
 .signin-form,
 .signup-form {
-  position: relative;
-  overflow: hidden;
-  width: 700px;
-  height: max-content;
+  position: absolute;
   background: url(erik-mclean-sxiSod0tyYQ-unsplash.jpg) no-repeat;
   background-position: center;
   background-size: cover;
-  /* box-shadow: 0 0 30px #ffee05; */
-  border: 1px solid #ffee05;
   border-radius: 20px 20px 0 50px;
   padding: 20px 20px;
   display: flex;
@@ -62,8 +79,22 @@ body::before {
   align-items: center;
 }
 
-.signin-form::after,
-.signup-form::after {
+.signin-form {
+  width: 50%;
+  height: max-content;
+  opacity: 0;
+  transform: translateX(-150%);
+}
+
+.signup-form {
+  width: 50%;
+  height: max-content;
+  opacity: 1;
+  /* transform: translateX(-200%); */
+}
+
+.signin-form::before,
+.signup-form::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -72,8 +103,10 @@ body::before {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgb(0, 0, 0, 0.6);
+  background-color: rgb(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
+  border: 1px solid #ffee05;
+  border-radius: 20px 20px 0 50px;
 }
 
 .signin-form > h1,
@@ -112,7 +145,7 @@ body::before {
 #signup-email,
 #signup-password,
 #signup-confirm-password {
-  font-weight: 500;
+  font-weight: 300;
   letter-spacing: 1px;
   z-index: 1111;
   width: 100%;
@@ -202,27 +235,17 @@ body::before {
   background-color: rgb(255, 238, 5, 0.3);
 }
 
-.signup-form,
-.signin-form {
-  transition: all 0.4s linear;
-  transform: scale(0);
-  opacity: 0;
-  visibility: hidden;
-  width: 0;
-  height: 0;
-}
-
 .account-Btns {
   width: 100%;
   height: 20%;
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 2%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
 }
+
 .SignUpButton,
 .SignInButton {
   transition: 0.4s ease-in-out;
@@ -263,16 +286,16 @@ body::before {
   transition: 0.3s ease-in-out;
   top: -8px;
   left: -8px;
-  border-top: 2px solid transparent;
-  border-left: 2px solid transparent;
+  border-top: 1px solid transparent;
+  border-left: 1px solid transparent;
 }
 .SignUpButton::before,
 .SignInButton::before {
   transition: 0.3s ease-in-out;
   bottom: -8px;
   right: -8px;
-  border-bottom: 2px solid transparent;
-  border-right: 2px solid transparent;
+  border-bottom: 1px solid transparent;
+  border-right: 1px solid transparent;
 }
 .SignUpButton:hover::before,
 .SignUpButton:hover::after,
@@ -284,8 +307,78 @@ body::before {
   border-radius: 20px 20px 0 20px;
   border-color: #ffee05;
 }
-@media (max-width: 1489px) {
+@media (max-width: 1400px) {
+  .signin-form,
+  .signup-form {
+    padding: 15px 15px;
+    width: 80%;
+    top: 15%;
+  }
+  .signup-form {
+    width: 80%;
+  }
+
+  .signin-form {
+    width: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .signin-form > h1,
+  .signup-form > h1 {
+    font-size: 2rem;
+  }
+  .signin-email-label,
+  .signin-password-label,
+  .name-label,
+  .signup-email-label,
+  .signup-password-label,
+  .signup-confirm-password-label {
+    font-size: 1rem;
+    gap: 5px 5px;
+    padding: 15px 15px;
+  }
+
+  #signin-email,
+  #signin-password,
+  #name,
+  #signup-email,
+  #signup-password,
+  #signup-confirm-password {
+    font-size: 15px;
+  }
+
+  #signin-email::placeholder,
+  #signin-password::placeholder,
+  #name::placeholder,
+  #signup-email::placeholder,
+  #signup-password::placeholder,
+  #signup-confirm-password::placeholder {
+    font-size: 1rem;
+  }
+
+  .account-Btns {
+    height: 10%;
+    top: 2%;
+  }
+
+  .SignUpButton,
+  .SignInButton {
+    padding: 8px 18px;
+    font-size: 1rem;
+  }
+}
+@media (max-width: 900px) {
+  .signin-form {
+    width: 80%;
+  }
+}
+@media (max-width: 350px) {
   .account-page {
-    height: auto;
+    padding: 20px 0 !important;
+  }
+  .signin-form,
+  .signup-form {
+    padding: 15px 15px;
+    width: 100%;
   }
 }
