--- a/style.css
+++ b/style.css
@@ -79,6 +79,33 @@ main::before {
   align-items: center;
 }
 
+.form-alert {
+  position: absolute;
+  top: -10%;
+  width: 100%;
+  padding: 20px 20px;
+  background-color: rgb(255, 0, 0, 0.7);
+  z-index: 1111111111;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.form-alert > div {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+.form-alert-close,
+.form-alert > div > i,
+.form-alert-text {
+  cursor: pointer;
+  color: white;
+  font-size: 25px;
+  letter-spacing: 1px;
+  font-weight: 300;
+}
 .signin-form {
   width: 50%;
   height: max-content;
@@ -307,6 +334,40 @@ main::before {
   border-radius: 20px 20px 0 20px;
   border-color: #ffee05;
 }
+
+.user-page {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.user-name {
+  font-size: 3rem;
+  color: #ffee05;
+}
+.start-quiz-btn {
+  transition: all 0.3s ease-in-out;
+  padding: 10px 20px;
+  z-index: 1111;
+  background-color: rgb(255, 238, 5, 0.3);
+  border-radius: 20px;
+  color: white;
+  font-weight: 400;
+  letter-spacing: 1px;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.start-quiz-btn:hover {
+  transition: all 0.3s ease-in-out;
+  background-color: rgb(255, 238, 5, 0.1);
+}
+
 @media (max-width: 1400px) {
   .signin-form,
   .signup-form {
