--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ main::before {
   top: -10%;
   width: 100%;
   padding: 20px 20px;
-  background-color: rgb(255, 0, 0, 0.7);
+  background-color: rgb(255, 0, 0, 0.8);
   z-index: 1111111111;
   display: flex;
   justify-content: space-between;
@@ -151,7 +151,8 @@ main::before {
 .name-label,
 .signup-email-label,
 .signup-password-label,
-.signup-confirm-password-label {
+.signup-confirm-password-label,
+.confirm-email-label {
   font-weight: 300;
   cursor: pointer;
   z-index: 1111;
@@ -171,7 +172,8 @@ main::before {
 #name,
 #signup-email,
 #signup-password,
-#signup-confirm-password {
+#signup-confirm-password,
+#confirm-email {
   font-weight: 300;
   letter-spacing: 1px;
   z-index: 1111;
@@ -190,7 +192,8 @@ main::before {
 #name:focus,
 #signup-email:focus,
 #signup-password:focus,
-#signup-confirm-password:focus {
+#signup-confirm-password:focus,
+#confirm-email:focus {
   outline: none;
 }
 #signin-email::placeholder,
@@ -198,7 +201,8 @@ main::before {
 #name::placeholder,
 #signup-email::placeholder,
 #signup-password::placeholder,
-#signup-confirm-password::placeholder {
+#signup-confirm-password::placeholder,
+#confirm-email::placeholder {
   font-size: 16px;
   font-weight: 400;
   letter-spacing: 0.5px;
@@ -335,21 +339,44 @@ main::before {
   border-color: #ffee05;
 }
 
+.signup-form,
+.signin-form,
+.account-Btns {
+  display: none;
+}
+
 .user-page {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   gap: 20px;
 }
+
+.user-page-header {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+/* .confirm-email-label {
+  opacity: .5;
+  transform: translateX(-200%);
+} */
+
 
 .user-name {
   font-size: 3rem;
   color: #ffee05;
 }
-.start-quiz-btn {
+
+.start-quiz-btn,
+.logout-btn,
+.deleteaccount-btn {
   transition: all 0.3s ease-in-out;
   padding: 10px 20px;
   z-index: 1111;
@@ -363,7 +390,9 @@ main::before {
   cursor: pointer;
 }
 
-.start-quiz-btn:hover {
+.start-quiz-btn:hover,
+.logout-btn:hover,
+.deleteaccount-btn:hover {
   transition: all 0.3s ease-in-out;
   background-color: rgb(255, 238, 5, 0.1);
 }
