--- a/style.css
+++ b/style.css
@@ -364,10 +364,9 @@ main::before {
 }
 
 .confirm-email-label {
-  opacity: .5;
+  opacity: 0.5;
   transform: translateX(-200%);
 }
-
 
 .user-name {
   font-size: 3rem;
@@ -397,6 +396,63 @@ main::before {
   background-color: rgb(255, 238, 5, 0.1);
 }
 
+.quiz {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.quiz-body {
+  width: 500px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 12px;
+  background-color: rgb(255, 238, 5, 0.3);
+  padding: 0px 12px;
+}
+
+.quiz-question {
+  font-size: 1rem;
+  font-weight: 300;
+  letter-spacing: -0.1px;
+  word-spacing: 1px;
+  color: white;
+}
+
+.quiz-answer-btns {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  gap: 10px 10px;
+  padding: 10px 10px;
+}
+.quiz-question-next,
+.quiz-answer-btn {
+  cursor: pointer;
+  width: 200px;
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  font-weight: 300;
+  color: #ffee05;
+  background-color: rgb(0, 0, 0, 0.9);
+  border-radius: 10vh 0 0 50vh;
+  border: none;
+}
+.quiz-question-next {
+  width: auto;
+  border-radius: 10vh 0 0 10vh;
+}
+.quiz-question-next:hover,
+.quiz-answer-btn:hover {
+  background-color: rgb(0, 0, 0, 0.5);
+}
 @media (max-width: 1400px) {
   .signin-form,
   .signup-form {
