--- a/style.css
+++ b/style.css
@@ -397,6 +397,7 @@ main::before {
 }
 
 .quiz {
+  position: relative;
   width: 100%;
   height: 100%;
   display: flex;
@@ -405,6 +406,37 @@ main::before {
   align-items: center;
 }
 
+.quiz-header {
+  width: 100%;
+  position: absolute;
+  top: 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 10px 20px;
+  align-items: center;
+}
+.incorrectanswer,
+.correctanswer {
+  font-size: 1.4rem;
+  font-weight: 300;
+  letter-spacing: 1px;
+  line-height: 30px;
+  color: white;
+  opacity: 0;
+}
+
+.quiz-timer {
+  text-align: center;
+  padding: 10px 30px;
+  font-size: 1.6rem;
+  line-height: 30px;
+  font-weight: 300;
+  color: #ffee05;
+  background-color: rgb(0, 0, 0, 0.9);
+  border-radius: 10vh 0 0 50vh;
+  border: none;
+}
 .quiz-body {
   width: 500px;
   height: 500px;
@@ -413,15 +445,15 @@ main::before {
   justify-content: space-evenly;
   align-items: center;
   border-radius: 12px;
-  background-color: rgb(255, 238, 5, 0.3);
-  padding: 0px 12px;
+  background-color: rgb(0, 0, 0, 0.3);
+  padding: 0px 18px;
 }
 
 .quiz-question {
-  font-size: 1rem;
+  font-size: 1.4rem;
   font-weight: 300;
-  letter-spacing: -0.1px;
-  word-spacing: 1px;
+  letter-spacing: 1px;
+  line-height: 30px;
   color: white;
 }
 
@@ -436,9 +468,10 @@ main::before {
 .quiz-question-next,
 .quiz-answer-btn {
   cursor: pointer;
-  width: 200px;
+  width: 220px;
   padding: 10px 20px;
-  font-size: 1.2rem;
+  font-size: 1rem;
+  line-height: 30px;
   font-weight: 300;
   color: #ffee05;
   background-color: rgb(0, 0, 0, 0.9);
@@ -453,6 +486,7 @@ main::before {
 .quiz-answer-btn:hover {
   background-color: rgb(0, 0, 0, 0.5);
 }
+
 @media (max-width: 1400px) {
   .signin-form,
   .signup-form {
