--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ main::before {
 .account-Btns {
   width: 100%;
   padding: 20px 0;
-  display: flex;
+  display: none;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
@@ -443,9 +443,9 @@ main::before {
   top: 5%;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  padding: 10px 20px;
+  justify-content: center;
   align-items: center;
+  padding: 10px 20px;
 }
 
 .correctanswer {
@@ -477,7 +477,7 @@ main::before {
   align-items: center;
   border-radius: 12px;
   background-color: rgb(0, 0, 0, 0.3);
-  padding: 0px 18px;
+  padding: 0 18px;
 }
 
 .quiz-question {
@@ -486,6 +486,7 @@ main::before {
   letter-spacing: 1px;
   line-height: 30px;
   color: white;
+  padding: 0 10px;
 }
 
 .quiz-answer-btns {
