--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ input:-internal-autofill-selected {
 main {
   width: 100%;
   height: 100vh;
-  background-image: url(69.png);
+  background-image: url(./images/background.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
